--- a/main.html
+++ b/main.html
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<nav>
+	<header>
+		<nav>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About us</a></li>
@@ -19,10 +20,24 @@
         </ul>
     </nav>
 	
-	 <h1>3 random videos</h1>
-	<video src = "http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls></video>
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls></video>	
-	<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls></video>
+	</header>
+	<main>
+		 <h1>3 random videos</h1>
+	<video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+
+    <video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+	</main>
 </body>
 
 </html>
